
2023-04-18  Simon Sobisch <simonsobisch@gnu.org>

	* numeric.c: integrated changes of Chuck Haatveet 2023-03-28 with tuning
	  for even more speed by using best matching types and refactoring
	* common.h: added cob_move_bcd as external function declaration
	* move.c (cob_move): add call to cob_move_bcd for fields without negative
	  scale

2023-04-17  Simon Sobisch <simonsobisch@gnu.org>

	* numeric.c (cob_decimal_setget_fld, cob_decimal_get_packed,
	  cob_decimal_get_display), common.h: new option COB_STORE_NO_SIZE_ERROR
	  to prevent arithmetic exception being raised during internal MOVE
	* intrinsic.c (cob_intr_lowest_algebraic, cob_intr_highest_algebraic):
	  refactored code for COMP-5
	* move.c (cob_move_display_to_packed), numeric.c (cob_decimal_get_packed):
	  minor adjustment to use optimal code for internal DISPLAY to PACKED,
	  even without C compiler optimizations active
	* move.c (cob_move_ibm): speedup by using pointer arithmetic

2023-04-13  Simon Sobisch <simonsobisch@gnu.org>

	performance adjustments for HEX-OF and HEX-TO-CHAR
	* intrinsic.c (test_digit, cob_intr_hex_to_char, cob_intr_locale_date,
	  cob_intr_locale_time), move.c (cob_move_alphanum_to_display,
	  cob_get_s64_pic9): prefer range check over isdigit for improved speed
	* numeric.c (cob_decimal_get_packed): use COB_D2I instead of subtracting
	* intrinsic.c (cob_intr_hex_to_char): minor refactoring for speedup
	* intrinsic.c (cob_intr_hex_of): rewritten to use hex value table instead
	  of sprintf, saving around 80% of cpu instructions

	performance adjustments for location code compatibility for old modules
	* common.c (get_stmt_from_name): extracted from cob_set_location and
	  cob_trace_stmt to remove duplication
	* common.c (get_stmt_from_name): rewritten to store the last statements,
	  which heavily reduces the use of strcmp and the hashing function
	* common.c (do_trace_statement): extracted from cob_trace_statement

2023-04-04  Simon Sobisch <simonsobisch@gnu.org>
